--- a/reddit-automation-suite/config.example
+++ b/reddit-automation-suite/config.example
@@ -9,12 +9,10 @@ client:
 mod_log_depth: 100
 cache_size: 500
 subreddit: foobarbaz
-report_config:
-  "FooBar": # String to watch for in report reasons
-    recipient: False
-    webhook: 'https://discord.com/api/webhooks/1234/abcde'
-  "BarBaz":
-    recipient: '@<discordID/RoleID>'
-    webhook: 'https://discord.com/api/webhooks/1234/abcde'
+streams:
+  comments: true
+  submissions: true
+  modlog: true
+  modmail: true
 plugins:
-  - "Foo"
+  - "DirectoryName.FileName.ClassName"
