--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
+atomicwrites==1.4.0
+attrs==21.4.0
+black==22.1.0
 certifi==2021.10.8
 charset-normalizer==2.0.11
+click==8.0.3
+colorama==0.4.4
+coverage==6.3.1
 discord-webhook==0.14.0
 idna==3.3
+iniconfig==1.1.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.9.0
+platformdirs==2.4.1
+pluggy==1.0.0
 praw==7.5.0
 prawcore==2.3.0
+py==1.11.0
+pyparsing==3.0.7
+pytest==7.0.0
+pytest-cov==3.0.0
 PyYAML==6.0
 requests==2.27.1
+tomli==2.0.0
 update-checker==0.18.0
 urllib3==1.26.8
 websocket-client==1.2.3
